test/trivial/roxana/test_param_decl3.good
test_param_decl3.chpl:1: error: Top-level params must be initialized.
